--- a/index.html
+++ b/index.html
@@ -61,90 +61,15 @@
             </div>
         </div>
 
-        <div class="cards">
-            <div class="card">
-                <button class="card-btn" id="bulbasaur">
-                    <p class="pokemon-id-back">#0001</p>
-                    <div class="pokemon-img">
-                        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/1.png"
-                            alt="bulbasaur">
-                    </div>
-                    <div class="pokemon-info">
-                        <div class="name-container">
-                            <p class="pokemon-id">#0001</p>
-                            <h2 class="pokemon-name">bulbasaur</h2>
-                        </div>
-                        <div class="type-pokemon">
-                            <p class="type-badge type-grass">Grass</p>
-                            <p class="type-badge type-poison">Poison</p>
-
-                        </div>
-                        <div class="pokemon-stats">
-                            <p class="stats">0,7 M</p>
-                            <p class="stats">6,7 Kg</p>
-
-                        </div>
-                    </div>
-                </button>
-            </div>
-            
-            <div class="card">
-                <button class="card-btn" id="bulbasaur">
-                    <p class="pokemon-id-back">#0001</p>
-                    <div class="pokemon-img">
-                        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/1.png"
-                            alt="bulbasaur">
-                    </div>
-                    <div class="pokemon-info">
-                        <div class="name-container">
-                            <p class="pokemon-id">#0001</p>
-                            <h2 class="pokemon-name">bulbasaur</h2>
-                        </div>
-                        <div class="type-pokemon">
-                            <p class="type-badge type-grass">Grass</p>
-                            <p class="type-badge type-poison">Poison</p>
-
-                        </div>
-                        <div class="pokemon-stats">
-                            <p class="stats">0,7 M</p>
-                            <p class="stats">6,7 KG</p>
-
-                        </div>
-                    </div>
-                </button>
-            </div>
-            
-            <div class="card">
-                <button class="card-btn" id="bulbasaur">
-                    <p class="pokemon-id-back">#0001</p>
-                    <div class="pokemon-img">
-                        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/1.png"
-                            alt="bulbasaur">
-                    </div>
-                    <div class="pokemon-info">
-                        <div class="name-container">
-                            <p class="pokemon-id">#0001</p>
-                            <h2 class="pokemon-name">bulbasaur</h2>
-                        </div>
-                        <div class="type-pokemon">
-                            <p class="type-badge type-grass">Grass</p>
-                            <p class="type-badge type-poison">Poison</p>
-
-                        </div>
-                        <div class="pokemon-stats">
-                            <p class="stats">0,7 M</p>
-                            <p class="stats">6,7 KG</p>
-
-                        </div>
-                    </div>
-                </button>
-            </div>
+        <div class="cards" id="listPokemon">
+            <!--  Here goes the list of Pokémon. If I don’t write it down, I will forget. -->
         </div>
     </div>
 
     <div class="main-card">
         <p>menu</p>
     </div>
+    <script src="./main.js"></script>
 </body>
 
 </html>
