--- a/index.html
+++ b/index.html
@@ -20,18 +20,48 @@
 <body>
     <!-- Sidebar -->
     <div class="main-bar">
+       
         <img src="/Img/pokedex_close.png" alt="Pokedex cerrada">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
-            class="icon-search">
-            <path stroke-linecap="round" stroke-linejoin="round"
-                d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z" />
-        </svg>
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
-            class="icon-random">
-            <path stroke-linecap="round" stroke-linejoin="round"
-                d="M19.5 12c0-1.232-.046-2.453-.138-3.662a4.006 4.006 0 0 0-3.7-3.7 48.678 48.678 0 0 0-7.324 0 4.006 4.006 0 0 0-3.7 3.7c-.017.22-.032.441-.046.662M19.5 12l3-3m-3 3-3-3m-12 3c0 1.232.046 2.453.138 3.662a4.006 4.006 0 0 0 3.7 3.7 48.656 48.656 0 0 0 7.324 0 4.006 4.006 0 0 0 3.7-3.7c.017-.22.032-.441.046-.662M4.5 12l3 3m-3-3-3 3" />
-        </svg>
+
+        <!-- Botón lupa -->
+        <button class="icon-btn" id="search-toggle" aria-label="Buscar">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                stroke="currentColor" class="icon-search">
+                <path stroke-linecap="round" stroke-linejoin="round"
+                    d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z" />
+            </svg>
+        </button>
+
+        <!-- Botón random -->
+        <button class="icon-btn" id="random-btn" aria-label="Pokémon aleatorio">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                stroke="currentColor" class="icon-random">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 12c0-1.232-.046-2.453-.138-3.662a4.006 4.006 0 0 0-3.7-3.7
+         48.678 48.678 0 0 0-7.324 0 4.006 4.006 0 0 0-3.7 3.7
+         c-.017.22-.032.441-.046.662M19.5 12l3-3m-3 3-3-3
+         m-12 3c0 1.232.046 2.453.138 3.662a4.006 4.006 0 0 0
+         3.7 3.7 48.656 48.656 0 0 0 7.324 0 4.006 4.006 0 0 0
+         3.7-3.7c.017-.22.032-.441.046-.662M4.5 12l3 3m-3-3-3 3" />
+            </svg>
+        </button>
+
+
         <img src="/Img/pokeball.png" alt="pokeball cerrada">
+    </div>
+
+    <!-- Panel de búsqueda oculto -->
+    <div class="search-panel" id="search-panel" aria-hidden="true">
+        <form id="search-form" autocomplete="off">
+            <label for="search-input" class="search-label">Buscar Pokémon</label>
+            <input id="search-input" class="search-input" type="text"
+                placeholder="ID (1–1025) o nombre (ej: bulbasaur)" />
+            <div class="search-actions">
+                <button type="submit" class="btn p">Buscar</button>
+                <button type="button" id="search-clear" class="btn type-steel">Limpiar</button>
+                <button type="button" id="search-close" class="btn type-dark">Cerrar</button>
+            </div>
+            <p class="search-error" id="search-error" role="status" aria-live="polite"></p>
+        </form>
     </div>
 
     <!-- Mid card: filtros y grilla -->
@@ -74,7 +104,6 @@
 
     <!-- Main card: detalle seleccionado -->
     <div class="main-card">
-        <!-- Número con flechas -->
         <div class="number">
             <button class="back" type="button">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
@@ -93,10 +122,8 @@
             </button>
         </div>
 
-        <!-- Nombre -->
         <p class="pokemon-name">bulbasaur</p>
 
-        <!-- Región + Nombre JP + Imagen -->
         <div class="basic-pokemon">
             <p class="region">Kanto</p>
             <p class="pokemon-name-ja">フシギダネ</p>
@@ -106,7 +133,6 @@
             </p>
         </div>
 
-        <!-- Tipos -->
         <div class="type">
             <p class="type-img">
                 <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/types/generation-ix/scarlet-violet/12.png"
@@ -118,7 +144,6 @@
             </p>
         </div>
 
-        <!-- Stats -->
         <div class="all-stats">
             <div class="stats">
                 <p>HP:</p>
