--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
   <!-- Sidebar (logo + actions) -->
   <div class="main-bar">
-    <img src="/Img/pokedex_close.png" alt="Pokedex cerrada">
+    <img src="/intro-to-asyncronism-Esteban9167/Img/pokedex_close.png" alt="Pokedex cerrada">
 
     <!-- Search button -->
     <button class="icon-btn" id="search-toggle" aria-label="Buscar">
