--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </svg>
     </button>
 
-    <img src="/Img/pokeball.png" alt="pokeball cerrada">
+    <img src="/intro-to-asyncronism-Esteban9167/Img/pokedexballe.png" alt="pokeball cerrada">
   </div>
 
   <!-- Search panel (hidden by default) -->
