--- a/index.html
+++ b/index.html
@@ -150,7 +150,8 @@
     </div>
   </div>
 
-  <!-- JS -->
+  <!-- JS: carga primero la configuración, luego tu lógica -->
+  <script src="./config.js"></script>
   <script src="./main.js"></script>
 </body>
 </html>
